# ospeak

./: README.md  pyproject.toml
.github/workflows/: test.yml
ospeak/: cli.py
tests/: test_ospeak.py
